# ecl_ws

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: bobo_node.pc
devel/share/bobo_node/cmake/: bobo_nodeConfig.cmake
log/: latest_list
src/bobo_node/: CMakeLists.txt
src/bobo_node/include/bobo_node/: diagnostics.hpp  kobuki_ros.hpp  odometry.hpp
src/bobo_node/launch/: minimal.launch
src/bobo_node/log/: latest_list
src/bobo_node/plugins/: nodelet_plugins.xml
src/popo_node/: CMakeLists.txt  package.xml
src/popo_node/include/popo_node/: kobuki_ros.hpp  odometry.hpp
src/popo_node/launch/: minimal.launch  test_get_odom.launch  test_get_yaw.launch
src/popo_node/plugins/: nodelet_plugins.xml
src/popo_node/scripts/: README.md  getOdom2D.py  getYaw.py
src/popo_node/src/nodelet/: kobuki_nodelet.cpp
