<?xml version="1.0"?>
<package format="2">
  <name>popo_node</name>
  <version>0.0.0</version>
  <description>The popo_node package</description>

  <maintainer email="zzuzhangjincan@163.com">Jcan</maintainer>
  <maintainer email="server01.psa1981@gmail.com">GhostMan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>


  <!-- ROS -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>

  <!-- yoyo -->
  <build_depend>driver_msgs</build_depend>
  <build_depend>yoyo_driver</build_depend>
  <build_depend>yoyo_safety_controller</build_depend>

  <!-- ECL -->
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_streams</build_depend>
  <build_depend>ecl_threads</build_depend>

  <!-- For Tests -->
  <build_depend>rospy</build_depend>


  <!-- ROS -->
  <exec_depend>capabilities</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <exec_depend>driver_msgs</exec_depend>
  <exec_depend>yoyo_driver</exec_depend>
  <exec_depend>yoyo_safety_controller</exec_depend>

  <!-- ECL -->
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_sigslots</exec_depend>
  <exec_depend>ecl_streams</exec_depend>
  <exec_depend>ecl_threads</exec_depend>

  <!-- For Tests -->
  <exec_depend>rospy</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
  </export>
</package>
